--- a/templates/index.html
+++ b/templates/index.html
@@ -142,6 +142,28 @@
                 <!-- Announcements will be loaded here -->
             </main>
         </div>
+
+        <!-- Daily Homework Page -->
+        <div id="daily-homework-screen" class="screen animated-screen">
+            <header>
+                <h2>오늘의 숙제</h2>
+                <button id="back-to-student-main-from-daily-homework" class="back-button">뒤로</button>
+            </header>
+            <main id="daily-homework-list">
+                <!-- Daily homework will be loaded here -->
+            </main>
+        </div>
+
+        <!-- Personal Homework Page -->
+        <div id="personal-homework-screen" class="screen animated-screen">
+            <header>
+                <h2>개인 숙제</h2>
+                <button id="back-to-student-main-from-personal-homework" class="back-button">뒤로</button>
+            </header>
+            <main id="personal-homework-list">
+                <!-- Personal homework will be loaded here -->
+            </main>
+        </div>
     </div>
 
     <!-- Custom Modal -->
